Bug 1900120 - Add Symbol section with symbol selection mechanism, behind Fancy Bar setting.

--- a/static/css/mozsearch.css
+++ b/static/css/mozsearch.css
@@ -60,6 +60,7 @@ table {
   --syntax-string-color: green;
   --syntax-regex-color: #6d7b8d;
   --syntax-symbol-highlight: yellow;
+  --syntax-symbol-selected-outline: orange;
 
   /* Our red-blue color scheme is from
    * https://colorbrewer2.org/#type=diverging&scheme=RdBu&n=11 and was chosen
@@ -125,6 +126,7 @@ table {
 
     --syntax-comment-color: GrayText;
     --syntax-symbol-highlight: #5d4d1d;
+    --syntax-symbol-selected-outline: orange;
     /* Shamelessly taken from source.chromium.org's dark theme */
     --syntax-type-color: #79a9c4;
     --syntax-reserved-color: #d8884b;
@@ -674,6 +676,37 @@ tr.after-context-line + tr.before-context-line {
   cursor: not-allowed;
 }
 
+.panel .selected-symbol-section {
+  width: 240px;
+  display: grid;
+  grid-template-columns: 200px 30px;
+  gap: 10px;
+}
+
+.panel .selected-symbol-section .selected-symbol-box {
+  position: relative;
+}
+
+.panel .selected-symbol-section .selected-symbol-box .selected-symbol-ns {
+  position: absolute;
+  top: -1em;
+  padding-inline-start: 26px;
+  height: 0.8em;
+  font-size: 0.8em;
+  white-space: pre;
+}
+.panel .selected-symbol-section .selected-symbol-box .selected-symbol-local {
+  padding-inline-start: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre;
+}
+
+.panel .selected-symbol-section .copy-box.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 /* Info Boxes */
 .info-box {
   border: 1px solid rgba(0, 0, 0, .5);
@@ -716,6 +749,9 @@ span[data-symbols]:hover {
 }
 span[data-symbols].hovered {
   background-color: var(--syntax-symbol-highlight);
+}
+span[data-symbols].selected {
+  outline: 1px dotted var(--syntax-symbol-selected-outline);
 }
 
 /* Help screen */
